# ParallelComputing

./: README.md  main
Abgabe/mpimv-student-1.0.0-Source/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
Abgabe/mpimv-student-1.0.0-Source/src/: mv1.c  mv2.c  mv_instance.h
Abgabe/parmerge-student-1.0.0-Source/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  parmerge-student-1.0.0-Source.tar.bz2
Abgabe/parmerge-student-1.0.0-Source/_CPack_Packages/Linux-Source/TBZ2/parmerge-student-1.0.0-Source/src/: merge.h  merge1.c  parmerge_tester.c  seq_common.h
Abgabe/parmerge-student-1.0.0-Source/jobs_files/: run_parmerge_tests.job
Abgabe/parmerge-student-1.0.0-Source/src/: merge2.c  merge3.c
Docker mpimv/src/: utils.c
Docker parmerge/src/: merge2.c  merge3.c  seq_common.c
Exercise 1/: main.c
Exercise 2/: main  main.c
Exercise 4/: Makefile
Exercise 5-7/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
Exercise 5-7/jobs_files/: run_local_parmerge_tests  run_local_seqmerge_tests  run_parmerge_tests.job  run_seqmerge_tests.job  slurm-1628671.out  slurm-1628675.out  slurm-1628691.out  slurm-1628701.out  slurm-1628708.out  slurm-1640262.out  slurm-1643086.out
Exercise 5-7/jobs_files/times_merge1/: output__100000000_200000000_11.out  output__100000000_200000000_16.out  output__100000000_200000000_2.out  output__100000000_200000000_32.out  output__100000000_200000000_4.out  output__100000000_200000000_8.out  output__10000000_20000000_11.out  output__10000000_20000000_16.out  output__10000000_20000000_2.out  output__10000000_20000000_32.out  output__10000000_20000000_4.out  output__10000000_20000000_8.out  output__1000000_2000000_11.out  output__1000000_2000000_16.out  output__1000000_2000000_2.out  output__1000000_2000000_32.out  output__1000000_2000000_4.out  output__1000000_2000000_8.out
Exercise 5-7/jobs_files/times_merge2/: output__100000000_200000000_11.out  output__100000000_200000000_16.out  output__100000000_200000000_2.out  output__100000000_200000000_32.out  output__100000000_200000000_4.out  output__100000000_200000000_8.out  output__10000000_20000000_11.out  output__10000000_20000000_16.out  output__10000000_20000000_2.out  output__10000000_20000000_32.out  (+8 more)
Exercise 5-7/src/: merge1.c  merge2.c  merge3.c  parmerge_tester.c
Exercise 8-9/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
Exercise 8-9/docker/: Dockerfile
Exercise 8-9/jobs_files/: output_mv2_16_1200.out  output_mv2_16_12000.out  output_mv2_16_300.out  output_mv2_16_600.out  output_mv2_1_1200.out  output_mv2_1_12000.out  output_mv2_1_300.out  output_mv2_1_600.out  output_mv2_32_1200.out  output_mv2_32_12000.out  output_mv2_32_300.out  output_mv2_32_600.out  output_mv2_seq_1200.out  output_mv2_seq_12000.out  output_mv2_seq_300.out  output_mv2_seq_600.out  run_local_mv  run_mv.job  slurm-1628359.out
Exercise 8-9/jobs_files/times_mv1/: output__16_1200.out  output__16_12000.out  output__16_300.out  output__16_600.out  output__1_1200.out  output__1_12000.out  output__1_300.out  output__1_600.out  output__32_1200.out  output__32_12000.out  output__32_300.out  output__32_600.out  output__seq_1200.out  output__seq_12000.out  output__seq_300.out  output__seq_600.out
Exercise 8-9/jobs_files/times_mv2/: output__16_1200.out  output__16_12000.out  output__16_300.out  output__16_600.out  output__1_1200.out  output__1_12000.out  output__1_300.out  output__1_600.out  output__32_1200.out  output__32_12000.out  output__32_300.out  output__32_600.out  output__seq_1200.out  output__seq_12000.out  output__seq_300.out  output__seq_600.out
Exercise 8-9/src/: mpimv_tester.c  mv.h  mv1.c  mv1_instance.c  mv2.c  mv2_instance.c
(+25 files in other folders)
